k8s/kustomize/overlays/sandbox-ops-managed/stateful-sample-app-drupal-example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stateful-sample-app-drupal-example
  annotations:
    flux.weave.works/ignore: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: "66.161.171.254/32,4.14.235.30/32"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - stateful-sample-app-drupal.ops.sandbox-k8s.hobsonsdev.net
  rules:
    - host: stateful-sample-app-drupal.ops.sandbox-k8s.hobsonsdev.net
      http:
        paths:
          - path: /*
            backend:
              serviceName: stateful-sample-app-drupal-example
              servicePort: 80
